@@ -2,14 +2,6 @@
 Remaining Work
 ##################################
 
-o Should be able to view sound waves and light waves from the side.(Sound and Light show same thing on side as on top)
-For 3-d waves (sound & light), rotation should be disabled when there are asymmetries (barriers, multiple sources, etc.)
-Hold off on the message "rotate to top view to use this" until we interview.
->>Awaiting feedback on implementation for light.
->>Make the side view go all the way down.
->>Add this feature to sound.
->>For particles, too, I suppose.
-
 When in side view for light: gray out the "show screen" option as well.
 
 o Test at 1024x768
